# ComfyUI-StreamDiffusion

./: .gitignore  README.md  controlnet_base_pipeline.py  controlnet_pipeline.py  nodes.py  pyproject.toml  requirements.txt  streamdiffusion_pipeline.py
.github/workflows/: publish_action.yml
examples/: ipadapter_working_trt.json  readme.txt  sd15_controlnet_ipadapter_all_dynamic_param.json  sd15_controlnet_ipadapter_trt.json  sd15_tensorrt_engine_build.json
scripts/: build_tensorrt_engines.py  build_trt_engine.py  entrypoint.sh  test_stream_dffusion2.py
